Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -206,6 +206,7 @@ footer{
 html{
     background-color: #F0F0F0;
     pointer-events: none;
+    overflow-x: hidden;
     /* background-color: bisque; */
     /* background-image: url("CrownedByRoyals Images/UntitledCBRBackground.png");
     background-attachment: fixed;
@@ -233,6 +234,9 @@ html{
     align-items: top;
 
 } */
+.parentImg .backgroundCBR{
+    width: 100%;
+}
 
 .parentImg .logo-text{
     width: 100%;
